updating with 3 additional projects, buttons for github repos

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -62,7 +62,21 @@
                 </div>
               </div>
             <div class="row">
-              <!-- project 1 (this site)-->
+              <section class="col-md-4">
+                <div class="card mb-3 bg-light border-0">
+                    <a target = '_blank' href="https://group-1-repo.herokuapp.com/">
+                      <img src="img/QuikCode.JPG" class="card-img-top" alt="quick code editor" >
+                    </a>
+                    <div class="card-body bg-info rounded-bottom">
+                      <h5 class="card-title text-white">QuikCode App</h5>
+                      <h6 class="card-title text-white">App for the beginner developer: save and retrieve your code snips! Passport.js authentication, acked by mySQL and Sequelize. </h6>
+                      <form class= "mx-auto" target= '_blank' action="https://github.com/johngarcia144/group-1-repo">
+                        <button class = "btn btn-outline-light text-white px-5 mb-3 mx-auto" type="submit"><i class="fab fa-github-square"></i>  Check out the Github Repo</button>
+                     </form>
+                    </div>
+                  </div>
+                </section>
+              <!-- goHiking app-->
                 <section class="col-md-4">
                     <div class="card mb-3 bg-light border-0">
                         <a target = '_blank' href="https://pprewitt.github.io/TrailsApp/">
@@ -70,19 +84,59 @@
                         </a>
                         <div class="card-body bg-info rounded-bottom">
                           <h5 class="card-title text-white">Go Hiking App</h5>
-                          <h6 class="card-title text-white">HTML, Bulma styling, JavaScript, APIs for hiking trails and restaurants</h6>
+                          <h6 class="card-title text-white">Find hiking trails, get driving directions and locate restaurants near the trailhead. Front end App with Bulma styling, multiple APIs</h6>
+                          <form class= "mx-auto" target= '_blank' action="https://github.com/pprewitt/TrailsApp">
+                            <button class = "btn btn-outline-light text-white px-5 mb-3 mx-auto" type="submit"><i class="fab fa-github-square"></i>  Check out the Github Repo</button>
+                         </form>
                         </div>
                       </div>
                     </section>
                 <section class="col-md-4">
-                  <!-- project 2 (not yet made)-->
+                  <!-- WEather dashboard-->
                     <div class="card mb-3 bg-light border-0">
                       <a target= '_blank' href="https://pprewitt.github.io/WeatherApp/">
                         <img src="img/WeatherAppScreenShot.PNG" class="card-img-top" alt="screen of code" >
                       </a>
                         <div class="card-body bg-info rounded-bottom">
                           <h5 class="card-title text-white">Weather Dashboard App</h5>
-                          <h6 class="card-title text-white">Bootstrap, jQuery, moment.js, APIs for weather search and display</h6>
+                          <h6 class="card-title text-white">Search for the weather in the city of your choice and get a 5 day forecast. Bootstrap, jQuery, moment.js, APIs for weather search and display</h6>
+                          <form class= "mx-auto" target= '_blank' action="https://github.com/pprewitt/WeatherApp">
+                            <button class = "btn btn-outline-light text-white px-5 mb-3 mx-auto" type="submit"><i class="fab fa-github-square"></i>  Check out the Github Repo</button>
+                         </form>
+                        </div>
+                      </div>
+                </section>
+                
+            </div>
+            <div class="row">
+              <!-- day planner app-->
+              <section class="col-md-4">
+                <div class="card mb-3 bg-light border-0">
+                  <a target= '_blank' href="https://sleepy-island-90524.herokuapp.com/">
+                      <img src="img/NoteTaker.JPG" class="card-img-top" alt="screen of code" >
+                    </a>
+                      <div class="card-body bg-info rounded-bottom">
+                      <h5 class="card-title text-white">Note Taker App</h5>
+                      <h6 class="card-title text-white">Simple interface for saving important notes. Heroku deployed Bootstrap, JavaScript and API platform using JSON as a database.</h6>
+                      <form class= "mx-auto" target= '_blank' action="https://github.com/pprewitt/Note-Taker">
+                        <button class = "btn btn-outline-light text-white px-5 mb-3 mx-auto" type="submit"><i class="fab fa-github-square"></i>  Check out the Github Repo</button>
+                     </form>
+                    </div>
+                  </div>
+            </section>
+                
+                <section class="col-md-4">
+                  <!-- project 2 (not yet made)-->
+                    <div class="card mb-3 bg-light border-0">
+                      <a target= '_blank' href="https://github.com/pprewitt/Employee_Tracker">
+                        <img src="img/EmployeeTracker.JPG" class="card-img-top" alt="tracker application" >
+                      </a>
+                        <div class="card-body bg-info rounded-bottom">
+                          <h5 class="card-title text-white">Employee Tracker System</h5>
+                          <h6 class="card-title text-white">Command line employee tracking system for assigning roles and departments in your organization. Node.js, with a MySQL back end.</h6>
+                          <form class= "mx-auto" target= '_blank' action="https://github.com/pprewitt/Employee_Tracker">
+                            <button class = "btn btn-outline-light text-white px-5 mb-3 mx-auto" type="submit"><i class="fab fa-github-square"></i>  Check out the Github Repo</button>
+                         </form>
                         </div>
                       </div>
                 </section>
@@ -94,7 +148,10 @@
                         </a>
                           <div class="card-body bg-info rounded-bottom">
                           <h5 class="card-title text-white">Daily Planner App</h5>
-                          <h6 class="card-title text-white">Bootstrap, jQuery, moment.js platform using local storage to plan your day.</h6>
+                          <h6 class="card-title text-white">A simple daily planner to help you organize your day. Front end application with Bootstrap styling, jQuery, and moment.js using local storage</h6>
+                          <form class= "mx-auto" target= '_blank' action="https://github.com/pprewitt/DailyPlanner">
+                            <button class = "btn btn-outline-light text-white px-5 mb-3 mx-auto" type="submit"><i class="fab fa-github-square"></i>  Check out the Github Repo</button>
+                         </form>
                         </div>
                       </div>
                 </section>
