--- a/Portfolio.html
+++ b/Portfolio.html
@@ -84,7 +84,7 @@
                         </a>
                         <div class="card-body bg-info rounded-bottom">
                           <h5 class="card-title text-white">Go Hiking App</h5>
-                          <h6 class="card-title text-white">Find hiking trails, get driving directions and locate restaurants near the trailhead. Front end App with Bulma styling, multiple APIs</h6>
+                          <h6 class="card-title text-white">Find hiking trails, get driving directions and locate restaurants near the trailhead. Front end App with Bulma styling, multiple APIs.</h6>
                           <form class= "mx-auto" target= '_blank' action="https://github.com/pprewitt/TrailsApp">
                             <button class = "btn btn-outline-light text-white px-5 mb-3 mx-auto" type="submit"><i class="fab fa-github-square"></i>  Check out the Github Repo</button>
                          </form>
@@ -99,7 +99,7 @@
                       </a>
                         <div class="card-body bg-info rounded-bottom">
                           <h5 class="card-title text-white">Weather Dashboard App</h5>
-                          <h6 class="card-title text-white">Search for the weather in the city of your choice and get a 5 day forecast. Bootstrap, jQuery, moment.js, APIs for weather search and display</h6>
+                          <h6 class="card-title text-white">Search for the weather in the city of your choice and get a 5 day forecast. Bootstrap, jQuery, moment.js, APIs for weather search and display.</h6>
                           <form class= "mx-auto" target= '_blank' action="https://github.com/pprewitt/WeatherApp">
                             <button class = "btn btn-outline-light text-white px-5 mb-3 mx-auto" type="submit"><i class="fab fa-github-square"></i>  Check out the Github Repo</button>
                          </form>
@@ -148,7 +148,7 @@
                         </a>
                           <div class="card-body bg-info rounded-bottom">
                           <h5 class="card-title text-white">Daily Planner App</h5>
-                          <h6 class="card-title text-white">A simple daily planner to help you organize your day. Front end application with Bootstrap styling, jQuery, and moment.js using local storage</h6>
+                          <h6 class="card-title text-white">A simple daily planner to help you organize your day. Front end application with Bootstrap styling, jQuery, and moment.js using local storage.</h6>
                           <form class= "mx-auto" target= '_blank' action="https://github.com/pprewitt/DailyPlanner">
                             <button class = "btn btn-outline-light text-white px-5 mb-3 mx-auto" type="submit"><i class="fab fa-github-square"></i>  Check out the Github Repo</button>
                          </form>
