edits on footer and some copy edits

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         </li>
         <!-- contact button -->
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Personal/Contact</a>
+          <a class="nav-link" href="contact.html">Personal</a>
         </li>
       </ul>
       <!-- tag line -->
@@ -36,7 +36,7 @@
   <!-- main section -->
   <main class="container mt-4">
     <div class="row ">
-        <article class="col-md-8">
+        <article class="col-md-12">
           <!-- bio/mission section -->
             <div class="card mb-3 border-0 bg-light">
                 <img src="img/Flatiron.jpg" class="card-img-top" alt="adventure climbing">
@@ -49,34 +49,14 @@
               </div>
             </article>
           <!-- contact form section -->
-        <aside class="col-md-4">
-            <div class="card mb-3 border-0 bg-light">
-                <div class="card-body">
-                    <h5 class="card-title">Reach Out!</h5>
-                    <p class="card-text">If I can help you get connected to a therapist, consult on solutions for your mental health network, or help in any way, please reach out.</p>
-                </div>
-                <form>
-                    <div class="form-group mr-3 ml-3">
-                      <label for="formGroupExampleInput">Reply to</label>
-                      <input type="text" class="form-control form-control-sm" id="formGroupExampleInput" placeholder="address@email.com">
-                    </div>
-                    <div class="form-group mr-3 ml-3">
-                      <label for="formGroupExampleInput2">Subject</label>
-                      <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="subject">
-                    </div>
-                    <div class="form-group mr-3 ml-3">
-                        <label for="exampleFormControlTextarea1">Body</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="7"></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-info ml-3 mb-4">Submit</button>
-                </form>
-            </div>
-          </aside>
+       
   </main>
   <footer class="row">
     <div class="col-md-12">
       <div class="card-footer text-white text-center">
        <p> &copy; 2020 Philip Prewitt, LPC</p>
+       <p> philip.prewitt@gmail.com</p>
+       <p> (720) 937-9565</p>
       </div>
     </div>
   </footer>
