--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a class="nav-link" href="Portfolio.html">Professional/Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Personal/Contact</a>
+          <a class="nav-link" href="contact.html">Personal</a>
         </li>
       </ul>
     </div>
@@ -78,6 +78,8 @@
     <div class="col-md-12">
       <div class="card-footer text-white text-center">
        <p> &copy; 2020 Philip Prewitt, LPC</p>
+       <p> philip.prewitt@gmail.com</p>
+       <p> (720) 937-9565</p>
       </div>
     </div>
   </footer>
